add text search

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <div class="search-container" style="position: absolute; top: 20px; right: 20px;">
+            <input type="text" id="search-input" placeholder="Семантический поиск по тексту..." style="padding: 6px 12px; border-radius: 4px; border: 1px solid #ccc; min-width: 260px;">
+            <button id="search-btn" style="padding: 6px 12px; margin-left: 4px; border-radius: 4px; border: 1px solid #ccc; background: #f5f5f5; cursor: pointer;">🔍</button>
+        </div>
+    </header>
     <div class="container">
         <main>
             <div class="current-poem">
