--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <button id="random-btn" style="position: absolute; top: 20px; left: 20px; padding: 6px 12px; border-radius: 4px; border: 1px solid #ccc; background: #f5f5f5; cursor: pointer;">Случайное стихотворение</button>
+        <div class="random-btn-container">
+            <button id="random-btn">Случайное стихотворение</button>
+        </div>
         <div class="search-container" style="position: absolute; top: 20px; right: 20px;">
             <input type="text" id="search-input" placeholder="Семантический поиск по тексту..." style="padding: 6px 12px; border-radius: 4px; border: 1px solid #ccc; min-width: 260px;">
             <button id="search-btn" style="padding: 6px 12px; margin-left: 4px; border-radius: 4px; border: 1px solid #ccc; background: #f5f5f5; cursor: pointer;">🔍</button>
